# IDA-Script-Helper

./: .gitignore  CLAUDE.md  README.md  install.sh  pyproject.toml
.github/workflows/: pypi.yml
claude/skills/ida-api/: SKILL.md
claude/skills/write-ida-script/: SKILL.md
examples/: decompile_func_by_addr.py  list_all_text_funcs.py  print_block_microcode.py  print_struct_type.py
src/ida_api_mcp/: __init__.py  __main__.py  cli.py  config.py  pipeline.py  server.py  version_manager.py
src/ida_api_mcp/collector/: doc_source.py  python_source.py  sdk_source.py
src/ida_api_mcp/extractor/: call_chain.py  models.py  python_call_chain.py
src/ida_api_mcp/indexer/: search.py  store.py
src/ida_api_mcp/parser/: html_parser.py  stub_parser.py
src/ida_sdk_workflow_mcp/: __main__.py  cli.py  config.py  server.py
src/ida_sdk_workflow_mcp/collector/: doc_source.py  python_source.py  sdk_source.py
src/ida_sdk_workflow_mcp/extractor/: call_chain.py  models.py  python_call_chain.py
src/ida_sdk_workflow_mcp/indexer/: search.py  store.py
src/ida_sdk_workflow_mcp/parser/: cpp_parser.py  html_parser.py  python_parser.py  stub_parser.py
tests/: conftest.py  test_extractor.py  test_html_parser.py  test_indexer.py  test_parser.py  test_python_extractor.py  test_server.py  test_stub_parser.py  test_version_manager.py
tests/fixtures/: decompile_plugin.cpp  sample_header.hpp  sample_ida_script.py  sample_stub.py  simple_plugin.cpp  xref_plugin.cpp
