[project]
name = "ida-sdk-workflow-mcp"
version = "0.1.0"
description = "MCP server for IDA SDK API workflow retrieval"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "mcp[cli]>=1.2.0",
    "tree-sitter==0.21.3",
    "tree-sitter-languages>=1.10.0",
    "chromadb>=0.5.0",
    "click>=8.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
]

[project.scripts]
ida-sdk-mcp = "ida_sdk_workflow_mcp.server:run_server"
ida-sdk-mcp-admin = "ida_sdk_workflow_mcp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ida_sdk_workflow_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
src = ["src", "tests"]
