[project]
name = "ida-api-mcp"
version = "0.1.0"
description = "MCP server for IDA SDK API workflow retrieval"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "mcp[cli]==1.26.0",
    "tree-sitter==0.21.3",
    "tree-sitter-languages==1.10.2",
    "chromadb==1.4.1",
    "click==8.3.1",
    "beautifulsoup4==4.14.3",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "ruff==0.15.0",
    "build==1.4.0",
    "twine==6.2.0",
]

[project.scripts]
ida-api-mcp = "ida_api_mcp.server:run_server"
ida-api-mcp-admin = "ida_api_mcp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ida_api_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
src = ["src", "tests"]
